--- a/index.html
+++ b/index.html
@@ -20,21 +20,11 @@
       <header id="header">
       </header>
 
-      <script id="tmpl-index-header" type="text/html">
-        <a target="_blank" href="http://github.com/firebase/firefeed" class="ribbon-github">
-          <img src="img/ribbon-github.png" alt="Fork me on GitHub" />
-        </a>
-        <a target="_blank" href="http://firebase.github.com" class="ribbon-curl">
-          <img src="img/curl-static.gif" width="200" height="200" alt="Official example"></a>
-        </a>
-      </script>
       <script id="tmpl-page-header" type="text/html">
         <div class="wrapper cf">
           <h1 class="logo"><a href="#" id="top-logo"><img src="img/wordmark.png" alt="Firefeed" /></a></h1>
           <nav>
-            <a id="search-button" href="#">Search</a>
             {{#user}}
-            &nbsp;|&nbsp;
             <a id="logout-button" href="#">Logout</a>
             {{/user}}
           </nav>
@@ -94,9 +84,6 @@
               <h2 class="end"><a class="profile-link" href="/?profile={{id}}">{{name}}</a></h2>
               <div class="big-copy end">
                 <div class="editable" id="inputLocation">{{location}}</div>
-              </div>
-              <div class="big-copy">
-                <div class="editable" id="inputBio">{{bio}}</div>
               </div>
             </div>
           </div>
@@ -191,7 +178,7 @@
             </div>
             <div class="body {{relative}}">
               <a class="profile-link" href="/?profile={{userId}}">
-                <p class="main-copy pushv">{{fullName}}</p>
+                <p class="main-copy pushv">{{name}}</p>
               </a>
             </div>
           </div>
@@ -203,9 +190,8 @@
         <div class="img avatar big pushv2 center">
           <img src="{{pic}}" alt="{{name}}" />
         </div>
-        <h2 class="pushv">{{fullName}}</h2>
+        <h2 class="pushv">{{name}}</h2>
         <p class="big-copy pushv">{{location}}</p>
-        <p class="big-copy end">{{bio}}</p>
         <div class="pushv4">
           <a href="#" id="followBtn-{{id}}" class="btn default pushv4">Follow</a>
         </div>
@@ -241,10 +227,8 @@
           </div>
           <div class="body">
             <p class="big-copy end">
-              <a class="profile-link" href="/?profile={{id}}">{{fullName}}</a>
+              <a class="profile-link" href="/?profile={{id}}">{{name}}</a>
             </p>
-            <p class="copy pushv">{{bio}}</p>
-            <a href="#" id="followBtn-{{id}}" class="btn default small">Follow</a>
           </div>
         </div>
       </script>
