Removed suggested users, removed last names

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
           <hr/>
 
-          <h2 class="subheading">Latest Sparks</h2>
+          <h2 class="subheading">Latest Requests</h2>
           <ul id="spark-index-list" class="item-list">
           </ul>
         </div>
@@ -97,9 +97,6 @@
 
           <div class="separator pushv4"></div>
 
-          <div id="suggested-users">
-            <h3>We suggest you follow:</h3>
-          </div>
         </div>
         <div class="twothird">
           <ul id="spark-timeline-list" class="item-list">
