Quantity number entry box

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="img/apple-touch-icon.png" rel="apple-touch-icon" />
     <link href="css/global.css" rel="stylesheet" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
+
   </head>
 
   <body>
@@ -88,9 +89,10 @@
             </div>
           </div>
           <div class="field">
-            <textarea id="spark-input" class="text" rows="4" cols="10" placeholder="Share an update"></textarea>
+            <textarea id="spark-input" class="text" rows="4" cols="10" placeholder="List the help and supplies you need. (Examples: Heavy Lifting, Garbage Disposal, Diapers, Laundry, etc.)"></textarea>
           </div>
           <small class="field-help"><span id="c-count"></span> characters remaining</small>
+		  <div class="qnty-selector">People required:<input type='text' id='qnty'/><span></span></div>
           <div id="spark-button-div">
             <a id="spark-button" href="#" class="btn default full pushv4">Update Status</a>
           </div>
