--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <textarea id="spark-input" class="text" rows="4" cols="10" placeholder="List the help and supplies you need. (Examples: Heavy Lifting, Garbage Disposal, Diapers, Laundry, etc.)"></textarea>
           </div>
           <small class="field-help"><span id="c-count"></span> characters remaining</small>
-		  <div class="qnty-selector"><input type='text' id='qnty' placeholder="People required"/></div>
+		  <div class="qnty-selector"><textarea id='qnty' class="text" rows="1" cols="3" placeholder="People required"/></div>
           <div id="spark-button-div">
             <a id="spark-button" href="#" class="btn default full pushv4">Update Status</a>
           </div>
@@ -197,6 +197,7 @@
                 <a class="profile-link" href="/?profile={{author}}">{{by}}</a>
               </p>
               <p class="main-copy pushv">{{content}}</p>
+			  <p class="main-copy pushv">{{location}}</p>
               <p class="meta end">
                 <a class="spark-link" href="?spark={{sparkId}}">{{friendlyTimestamp}}</a>
               </p>
