--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
         <div class="threefifth center aligncenter">
           <img src="img/logo.png" />
           <p>&nbsp;</p>
-          <h1 class="main-heading"><img src="img/wordmark-large.png" alt="Firefeed" /></h1>
+          <h1 class="main-heading"><img src="img/yychelps.jpg" alt="yychelps" /></h1>
           <h2 class="subheading">
-            An <a target="_blank" href="http://github.com/firebase/firefeed">open source</a>
-            Twitter clone built with <a target="_blank" href="https://firebase.com">Firebase</a>.
+            A realtime volunteer request queue built with <a target="_blank" href="https://firebase.com">Firebase</a>. It&rsquo;s like twitter crossed with kickstarter.
           </h2>
-          <p class="big-copy pushv8">Feel free to use and modify this in your own products and projects!</p>
+          <p class="big-copy pushv8">Please ask for no more resources than you need, and accept only the requests that you can fulfill.</p>
 
           <div id="login-div" class="pushv4">
             <a id="login-button" href="#" class="btn clean">
@@ -196,8 +195,8 @@
             </div>
 			<div class="score">
 				<h2 class='quantity'>{{fulfilled}}/{{requested}}</h2>
-				<div id="spark-button-div">
-		            <a id="spark-button" href="#" class="btn default small">Accept</a>
+				<div id="accept-button-div">
+		            <a id="accept-button{{sparkId}}" href="#" class="btn default small">Accept</a>
 		        </div>
 			</div>
           </div>
