--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8" />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1, user-scalable=no" />
-    <title>Firefeed - by Firebase</title>
-    <meta name="description" content="An open source Twitter clone built with Firebase">
+    <title>[LIVE] yychelps</title>
+    <meta name="description" content="A realtime flood relief system for Calgary Alberta, Summer 2013">
     <link href="img/favicon.png" rel="shortcut icon" />
     <link href="img/apple-touch-icon.png" rel="apple-touch-icon" />
     <link href="css/global.css" rel="stylesheet" />
@@ -47,8 +47,6 @@
 
       <script id="tmpl-index-content" type="text/html">
         <div class="threefifth center aligncenter">
-          <img src="img/logo.png" />
-          <p>&nbsp;</p>
           <h1 class="main-heading"><img src="img/yychelps.jpg" alt="yychelps" /></h1>
           <h2 class="subheading">
             A realtime volunteer request queue built with <a target="_blank" href="https://firebase.com">Firebase</a>. It&rsquo;s like twitter crossed with kickstarter.
