--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <small class="field-help"><span id="c-count"></span> characters remaining</small>
 		  <div class="qnty-selector"><textarea id='qnty' class="text" rows="1" cols="3" placeholder="People required"/></div>
           <div id="spark-button-div">
-            <a id="spark-button" href="#" class="btn default full pushv4">Update Status</a>
+            <a id="spark-button" href="#" class="btn default full pushv4">Post Request</a>
           </div>
 
           <div class="separator pushv4"></div>
