--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <a class="profile-link" href="/?profile={{author}}">{{by}}</a>
               </p>
               <p class="main-copy pushv">{{content}}</p>
-			  <p class="main-copy pushv">{{location}}</p>
+			  <p class="main-copy pushv">{{location}} [<a href="http://maps.google.com/?q={{location}}" target="_blank">Map</a>]</p>
               <p class="meta end">
                 <a class="spark-link" href="?spark={{sparkId}}">{{friendlyTimestamp}}</a>
               </p>
