Hide fulfilled request sparks, limit request number

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
       <script id="tmpl-index-content" type="text/html">
         <div class="threefifth center aligncenter">
-          <h1 class="main-heading"><img src="img/yychelps.jpg" alt="yychelps" /></h1>
+		  <h1 class="main-heading"><img src="img/yychelps.jpg" alt="yychelps" /></h1>
+          <h1 class="main-heading"><img src="img/yychelps-2.jpg" alt="yychelps" /></h1>
           <h2 class="subheading">
             A realtime volunteer request queue built with <a target="_blank" href="https://firebase.com">Firebase</a>. It&rsquo;s like twitter crossed with kickstarter.
           </h2>
